--- a/index.html
+++ b/index.html
@@ -24,28 +24,35 @@
 
 <body>
   <div class="card">
-    <div class="card-icon">
-      <ion-icon name="star"></ion-icon>
-    </div>
-    <h2 class="card-title">
-      How did we do?
-    </h2>
-    <p class="card-text">Please let us know how we did with your support request. All feedback is appreciated
-      to help us improve our offering!</p>
-    <div class="numeration">
-      <div class="ratio">1</div>
-      <div class="ratio">2</div>
-      <div class="ratio">3</div>
-      <div class="ratio">4</div>
-      <div class="ratio">5</div>
-    </div>
-    <div class="card-btn">
-      <button>SUBMIT</button>
+    <div class="first">
+      <div class="card-icon">
+        <ion-icon name="star"></ion-icon>
+      </div>
+      <h2 class="card-title">
+        How did we do?
+      </h2>
+      <p class="card-text">Please let us know how we did with your support request. All feedback is appreciated
+        to help us improve our offering!</p>
+      <div class="numeration">
+        <div class="ratio">1</div>
+        <div class="ratio">2</div>
+        <div class="ratio">3</div>
+        <div class="ratio">4</div>
+        <div class="ratio">5</div>
+      </div>
+      <div >
+        <a href="./index2.html">
+          <button class="card-btn">SUBMIT</button>
+
+        </a>
+      </div>
     </div>
 
   </div>
 
 
+
+  </div>
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
