--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
         </div>
         <p class="rating">You selected 4 out of 5</p>
         <h2 class="title-thanks">Thank you!</h2>
-        <p class="text">We appreciate you taking the time to give a rating. If you never need more support, don't hesitate to get in touch</p>
+        <p class="text">We appreciate you taking the time to give a rating. If you never need more support, don't hesitate to get in touch!</p>
       </div>
 </body>
 </html>
